done sorter utility todo optimzations

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GeneratorUtility\GeneratorUtility.csproj" />
+    <ProjectReference Include="..\SorterUtility\SorterUtility.csproj" />
   </ItemGroup>
 
 </Project>
